Upcoming:
- Fixed dropping liquid buckets in the fluid opcodes

1.9.3:
- Needs McJtyLib 3.1.0
- Support for COFH RF API is removed. Only Forge Energy is supported now

1.9.2:
- Made compatible with RFTools 7.58

1.9.1:
- Fixed a bug with the vector pop operation. It would always return an empty list

1.9.0:
- Made compatible with the latest McJtyLib (3.0.0)

1.9.0alpha:
- Made compatible with the latest McJtyLib (3.0.0)